Javac2007/src/test/attr/error/enum_no_subclassing.java
package test.attr.error;
public class enum_no_subclassing extends Enum {}
